AWS/Resources/EKS/hands-on-learning/05-ingress-controller/advanced-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-server-service
            port:
              number: 80
      - path: /app1
        pathType: ImplementationSpecific  
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /app2
        pathType: ImplementationSpecific
        backend:
          service:
            name: app2-service
            port:
              number: 80
